Closed
Bug 388522
Opened 18 years ago
Closed 18 years ago
Can't drag and drop URLs to the desktop
Categories
(Core :: DOM: Copy & Paste and Drag & Drop, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: marcia, Assigned: jaas)
Details
(Keywords: regression)
Attachments
(1 file)
|
3.02 KB,
patch
|
stanshebs
:
review+
pavlov
:
superreview+
|
Details | Diff | Splinter Review |
Seen using the latest nightly, Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a7pre) Gecko/2007071704 Minefield/3.0a7pre
STR:
1. Load a few tabs.
2. Try to drag a tab or URL to the desktop.
Nothing happens.
This is a regression between yesterday's build, Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a7pre) Gecko/2007071604 Minefield/3.0a7pre and today's build. The only bug that looked suspect was Bug 358093
This fixes it, we don't always want to put promised file data on the clipboard. Nice catch Marcia!
Comment 2•18 years ago
|
||
Comment on attachment 272718 [details] [diff] [review]
fix v1.0
I had the patch in my tree so long, I thought URL dragging had always been broken on the trunk. :-)
Attachment #272718 -
Flags: review?(stanshebs) → review+
Attachment #272718 -
Flags: superreview?(pavlov)
Updated•18 years ago
|
Attachment #272718 -
Flags: superreview?(pavlov) → superreview+
fixed on trunk
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 4•18 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a7pre) Gecko/2007072004 Minefield/3.0a7pre. I tried various combinations of dragging links from pages, the URL bar, and from tabs and everything works as expected.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•