fix dragging URLs to the desktop. don't always claim to have promised file data. b=388522 r=shebs sr=pav